filter menu items via access condition; refs #26920